test/typeerrors/Strategies/Undefined.type

  x :: a ; y :: b ; 
  ---------------------
     x ++++ y :: Int;;
     
a == Int : "linkerkant moet een Int zijn"
b == Int : "rechterkant moet een Int zijn";
